# gmml2

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GenerateVersion.cmake  README.md  compilePrograms.sh  gmml.cppcheck  gmml.i  gmml2.i  make.sh  updateCmakeFileList.sh  versionHeader.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
.hooks/: post-merge  pre-commit  tag-release.sh  validate-version-txt.sh
.hooks/pre-push.d/: pre-push.tests.sh
cmakeFileLists/: cFileList.txt  externalHDirectoryList.txt  hDirectoryList.txt
dat/: README
dat/MolecularMetadata/: GlycamLookupTable.csv
dat/prep/: GLYCAM_06j-1_GAGS_KDN.prep
docker/: README.md  README_USAGE.md
docker/dockerhub/: Dockerfile  README.md
docs/: atomic-overlaps.md  carbohydrates.md  data-structures.md  files.md  glycoproteins.md  graphs.md  index.md  molecular-graphs.md  molecular-shapes.md  releases-versioning.md  scripts-standards.md  swig-wrapping.md  testing.md
include/: version.h  version.h.in
include/CentralDataStructure/: assembly.hpp  atom.hpp  cdsFunctions.hpp  cdsTypes.hpp  graphInterface.hpp  molecule.hpp  offWriter.hpp  pdbWriter.hpp  print.hpp  residue.hpp  residueTypes.hpp
include/assembly/: assemblyBounds.hpp  assemblyFunctions.hpp  assemblyGraph.hpp  assemblyIndices.hpp  assemblyOverlap.hpp  assemblySelection.hpp  assemblyTypes.hpp
include/carbohydrate/: carbohydrate.hpp  carbohydrateTypes.hpp  dihedralAngleSearch.hpp  dihedralAngleSearchTypes.hpp  dihedralShape.hpp  dihedralShapeTypes.hpp  offWriter.hpp  parameterManager.hpp  pdbWriter.hpp
include/geometry/: boundingSphere.hpp  geometryFunctions.hpp  geometryTypes.hpp  matrix.hpp  measurements.hpp  orientation.hpp  overlap.hpp  rotationMatrix.hpp  superimposition.hpp
include/glycoprotein/: cdsInterface.hpp  glycanShape.hpp  glycanWiggle.hpp  glycoproteinCreation.hpp  glycoproteinStructs.hpp  glycoproteinUtil.hpp  overlapCount.hpp  shapeRandomization.hpp  sidechains.hpp  writerInterface.hpp
include/graph/: graphFunctions.hpp  graphManipulation.hpp  graphMatching.hpp  graphTypes.hpp
include/internalPrograms/: glycosylationSiteFinder.hpp
include/metadata/: README  aminoAcids.hpp  atomicBonds.hpp  dihedralangledata.hpp  elements.hpp  glycam06Functions.hpp  glycam06ResidueNameGenerator.hpp  glycoprotein.hpp  residueTypes.hpp  sidechainRotamers.hpp
include/off/: offFileData.hpp  offFileWriter.hpp
include/pdb/: amberMdPrep.hpp  atomicConnectivity.hpp  bondByDistance.hpp  pdbAtom.hpp  pdbChain.hpp  pdbData.hpp  pdbFile.hpp  pdbFileData.hpp  pdbFileWriter.hpp  pdbFunctions.hpp  pdbModel.hpp  pdbPreProcess.hpp  pdbPreprocessorInputs.hpp  pdbRecordTypes.hpp  pdbRecords.hpp  pdbResidue.hpp  pdbResidueId.hpp  pdbSelections.hpp
include/preprocess/: amberMdPrep.hpp  parameterManager.hpp  pdbPreProcess.hpp  pdbPreprocessorInputs.hpp
include/programs/: glycamResidueCombinator.hpp  glycosylationSiteFinder.hpp
include/readers/: parameterManager.hpp
include/sequence/: carbohydrate.hpp  graphViz.hpp  parsedResidue.hpp  sequence.hpp  sequenceGraph.hpp  sequenceManipulation.hpp  sequenceParser.hpp  sequencePrinter.hpp  sequenceTypes.hpp  sequenceUtil.hpp
include/structure/: atomOverlaps.hpp
include/templateGraph/: ConnectivityIdentifier.hpp  Edge.hpp  GenericGraphObject.hpp  Graph.hpp  HalfAdjacencyMatrix.hpp  Node.hpp  SubgraphMatching.hpp  TotalCycleDecomposition.hpp
include/util/: arguments.hpp  casting.hpp  constants.hpp  containerTypes.hpp  containers.hpp  files.hpp  filesystem.hpp  formatting.hpp  logging.hpp  metropolisCriterion.hpp  parsing.hpp  random.hpp  strings.hpp  structuredFiles.hpp  threads.hpp
include/writers/: offWriter.hpp  pdbWriter.hpp  print.hpp
includes/: gmml.hpp
includes/Abstract/: absResidue.hpp
includes/Assembly/: assemblyBounds.hpp  assemblyGraph.hpp  assemblyIndices.hpp  assemblySelection.hpp  assemblyTypes.hpp
includes/CentralDataStructure/: assembly.hpp  atom.hpp  boundingSphere.hpp  cdsTypes.hpp  coordinate.hpp  ensemble.hpp  geometry.hpp  molecule.hpp  orientation.hpp  residue.hpp  residueTypes.hpp
includes/CodeUtils/: arguments.hpp  biology.hpp  casting.hpp  codetests.hpp  constants.hpp  containerTypes.hpp  containers.hpp  directories.hpp  files.hpp  filesystem.hpp  find.hpp  formatting.hpp  logging.hpp  metropolisCriterion.hpp  numbers.hpp  parsing.hpp  random.hpp  references.hpp  strings.hpp  structuredFiles.hpp  threads.hpp
includes/Graph/: cdsToGraph.hpp  graphDataLayer.hpp  graphFunctions.hpp  graphManipulation.hpp  graphMatching.hpp  graphTypes.hpp  manipulation.hpp  traversable.hpp  types.hpp
includes/MolecularMetadata/: aminoAcids.hpp  atomicBonds.hpp  atomicNumbers.hpp  elements.hpp  glycoprotein.hpp  proteinBonding.hpp  sidechainRotamers.hpp
internalPrograms/: createGlycosylationTables.cpp  pdbAnalyzer.cpp
internalPrograms/CarbohydrateBuilder/: README.md  carbBuilderMain.cpp  main.cpp
internalPrograms/DrawGlycan/: drawGlycanMain.cpp
internalPrograms/Dunbrack/: dunbrackMain.cpp
internalPrograms/GlycoproteinBuilder/: README.md  gpBuilder_main.cpp
internalPrograms/WiggleToSite/: wiggleToSiteDriver.cpp
programs/: createGlycosylationTables.cpp  glycamResidueCombinator.cpp  glycomimeticPreprocessor.cpp  pdbAnalyzer.cpp
programs/CarbohydrateBuilder/: README.md  (+1 more)
tests/: 001.test.graph.sh  016.test.DrawGlycan.sh  017.test.GlycoproteinBuilder.sh  017b.test.GlycoproteinBuilderFailure.sh  018.test.GlycoproteinBuilderTable.sh  019.test.newPDBClass.sh  020.test.parameterFiles.sh  022.test.libraryFileReader.sh  023.output_carbohydrateBuilder.txt  023.test.carbohydrateBuilder.sh  024.test.wiggleToSite.sh  026.test.editPdbFile.sh  027.test.glycamResidueCombinator.sh  028.test.cdsCarbBuilderAll.sh  029.disabled.graph.sh  029.test.graph.sh  030.test.gmPreProcessor.sh  031.test.iupac.sh  032.test.ringAtomFinder.sh  base_test.txt  compile_run_tests.bash  testList.txt  test_runner.sh  testsBase.txt  testsDrawGlycan.txt  testsGpBuilder.txt  testsGpBuilderLong.txt
tests/001.test.graph/: CMakeLists.txt
tests/graph/: CMakeLists.txt
(+1304 files in other folders)
